--- a/public/admin/css/index-admin.css
+++ b/public/admin/css/index-admin.css
@@ -735,3 +735,14 @@ tr:nth-child(even) {
 .box-shadow {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 20px, rgba(0, 0, 0, 0.15) 0px 3px 8px;
 }
+
+button,
+input {
+  cursor: pointer !important;
+}
+
+.warning {
+  color: #a60212;
+
+  padding-right: 0.5rem;
+}
