--- a/public/css/index.css
+++ b/public/css/index.css
@@ -39,7 +39,7 @@
   --color-gray: #323847;
   --color-purple: #503a96;
 
-  --sidebar-color-lighter: #d29c45;
+  --sidebar-color-lighter: #534939;
   --sidebar-color: #e1ae5b;
 
   /* div sizes */
